<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center"
    android:background="@drawable/twitter_background_temp6">
    <Button
        android:id="@+id/start_antonym_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:background="@android:color/transparent"
        android:text="@string/Anotnym_test"/>

    <Button
        android:id="@+id/start_synoynm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="30dp"
        android:layout_gravity="center"
		android:background="@android:color/transparent"
        android:text="@string/Synonym_test" />
    <Button
        android:id="@+id/Help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/Help" />
    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/About" />
    <Button
        android:id="@+id/exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="30dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:text="@string/Exit" />

</LinearLayout>