<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:background="@drawable/clouds_ng" >
    <TextView 
        android:id="@+id/Test_Heading_show"
       android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:layout_gravity="center"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/Synonym_test"/>
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
    <TextView 
        android:id="@+id/Question_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginBottom="14dp"
        android:text="This is a question"/>
     <TextView
        android:id="@+id/question_number_show"
         android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        android:text="1 of 10"
        android:textSize="20dp" />
    
    </RelativeLayout>
    <TextView 
        android:id="@+id/Answer_show"
         android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/Options"/>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/myRadioButton1_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:background="@android:color/transparent"
            android:layout_marginLeft="20dp"
         
            android:text="@string/app_name" />
        <ImageView
            android:id="@+id/myCheck1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@drawable/fileclose"
            android:visibility="gone" />

        </LinearLayout>

     <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

         <Button
             android:id="@+id/myRadioButton2_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:background="@android:color/transparent"
             android:text="@string/app_name"
             android:textSize="20dp" />

         <ImageView
             android:id="@+id/myCheck2"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:background="@drawable/button_ok"
             android:visibility="gone" />

        </LinearLayout>
         <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

             <Button
                 android:id="@+id/myRadioButton3_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                  android:background="@android:color/transparent"
                 android:text="@string/app_name"
                 android:textSize="20dp"
                 />

             <ImageView
                 android:id="@+id/myCheck3"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="5dp"
                 android:layout_gravity="center"
                 android:background="@drawable/button_ok"
                 android:visibility="gone" />

        </LinearLayout>

         <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

             <Button
                 android:id="@+id/myRadioButton4_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:background="@android:color/transparent"
                 android:text="@string/app_name"
                 android:textSize="20dp" />

             <ImageView
                 android:id="@+id/myCheck4"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="5dp"
                 android:layout_gravity="center"
                 android:background="@drawable/button_ok"
                 android:visibility="gone" />

        </LinearLayout>

         <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

             <Button
                 android:id="@+id/myRadioButton5_show"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                  android:background="@android:color/transparent"
                 android:text="@string/app_name"
                 android:textSize="20dp" />

             <ImageView
                 android:id="@+id/myCheck5"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_margin="5dp"
                 android:layout_gravity="center"
                 android:background="@drawable/button_ok"
                 android:visibility="gone" />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <Button
            android:id="@+id/Prev_button_show"
           android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:background="@drawable/answer"
            android:layout_alignParentLeft="true"
            android:text="@string/previous" />

        <Button
            android:id="@+id/Next_Button_show"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/answer"
            android:layout_margin="5dp"
            android:textSize="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/next" />
    </RelativeLayout>
   
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Description" />

        </TableRow>
    </TableLayout>

</LinearLayout>